# san-sheng-wanwu-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  HEARTBEAT.md  README.md  README.zh.md  ROADMAP.md  SELF_MODEL.md  SOUL.md  TOOLS.md  USER.md  pyproject.toml
.reasonix/readme-versions/: README-v0.1.0-senses-cortex-20260617.md  README-v0.2.0-20260619-0049.md  README-v1.0.0-20260619-0111.md  README-v1.0.0-philosophical-20260619.md  README-v1.0.0-pre-rewrite-20260619-1742.md  README.zh-v1.0.0-20260619.md
config/: alignment.yaml  coordination.yaml  fish_species_index.yaml  species_variants.yaml
data/: yangtze_species_list.txt
docs/: DOMAIN_KNOWLEDGE_INDEX.md  MCP_WIRING_GUIDE.md  SILICON_LIFE_KNOWLEDGE_BASE.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: _add_analysis.py  _ocr_read.py  _update_init.py  arch_scan.py  audit.py  code_audit.py  coordination_check.py  dead_check.py  save_readme_version.py  silicon-agent.bat  silicon_agent_launcher.py  stress_test.py  upgrade_projects.py  verify_architecture.py
src/: __init__.py  cli.py  main.py
src/cortex/: __init__.py  alignment.py  brainstorming.py  conceptual.py  cosmic.py  dialectics.py  (+19 more)
tests/: test_conceptual_explanatory.py  test_cortex.py  test_cosmic.py  test_domains.py  test_evolution.py  test_learning_evolution.py  test_magma.py  test_memory_motor.py  test_ocr.py  test_persistence.py  test_regen.py  test_semantic.py  test_senses.py  test_soul_emotion.py  test_swarm_alignment_healing.py  test_transposition.py
知识库_工程原理与哲学思考/: README.md  树状分支_生命树_神经元_知识体系.md  语言_逻辑_符号_音律.md
(+459 files in other folders)
