[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "san-sheng-wanwu-core"
version = "0.2.0"
description = "三生万物·硅基生命体 — 统一物种智能分析核心"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
silicon-agent = "src.main:main"

[tool.setuptools.packages.find]
where = ["src", "src/memory/kb"]
include = ["src*", "fishkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
